--- a/index.html
+++ b/index.html
@@ -388,11 +388,11 @@ Diketahui dalam suatu kotak terdapat 2 bola kuning dan 4 bola hijau. Jika diambi
 
 Misalkan `\(X\)` peubah acak diskret, maka
 
-- .red[**Nilai Harapan: **] `\(E(X)=\sum_{\forall x}xp(x)\)`
+- .red[**Nilai Harapan: **] `\(E(X)=\sum_\limits{\forall x}xp(x)\)`
 
 
 - .red[**Ragam: **] `\(\text{Var}(X)=E(X^2)-[E(X)]^2\)`&lt;br&gt;
-  dengan `\(E(X^2)=\sum_{\forall x}x^2p(x)\)`&lt;br&gt;&lt;br&gt;
+  dengan `\(E(X^2)=\sum_\limits{\forall x}x^2p(x)\)`&lt;br&gt;&lt;br&gt;
   
 .red[**Contoh: **]Misalkan diketahui peubah acak diskret `\(X\)` dengan sebaran peluang
 
@@ -408,8 +408,8 @@ Misalkan `\(X\)` peubah acak diskret, maka
 
 
 
-`\(E(X)=\sum_{\forall x}xp(x)=0(1/8)+2(4/8)+4(3/8)=5/2\)`&lt;br&gt;&lt;br&gt;
-`\(E(X^2)=\sum_{\forall x}x^2p(x)=0+2+6=8\)`&lt;br&gt;&lt;br&gt;
+`\(E(X)=\sum_\limits{\forall x}xp(x)=0(1/8)+2(4/8)+4(3/8)=5/2\)`&lt;br&gt;&lt;br&gt;
+`\(E(X^2)=\sum_\limits{\forall x}x^2p(x)=0+2+6=8\)`&lt;br&gt;&lt;br&gt;
 `\(\text{Var}(X)=E(X^2)-[E(X)]^2=8-(5/2)^2=7/4\)`&lt;br&gt;&lt;br&gt;
 `\(E(2X-1)=2E(X)-1=2(5/2)-1=4\)`&lt;br&gt;&lt;br&gt;
 `\(\text{Var}(2X-1)=4\text{Var}(X)=4(7/4)=7\)`
