--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Statistika: Pertemuan 05</title>
     <meta charset="utf-8" />
     <meta name="author" content="oleh Riana Hadiana" />
-    <script src="libs/header-attrs-2.10/header-attrs.js"></script>
+    <script src="libs/header-attrs-2.17/header-attrs.js"></script>
     <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="libs/remark-css-0.0.1/default-fonts.css" rel="stylesheet" />
     <link href="libs/tile-view-0.2.6/tile-view.css" rel="stylesheet" />
@@ -28,10 +28,18 @@
     <textarea id="source">
 class: center, middle, inverse, title-slide
 
+.title[
 # Statistika: Pertemuan 05
+]
+.subtitle[
 ## Peubah Acak (.red[<em>Random Variable</em>])
+]
+.author[
 ### oleh Riana Hadiana
+]
+.institute[
 ### Universitas Serang Raya
+]
 
 ---
 
@@ -172,7 +180,7 @@ background-image: url("gb_03.jpg")
 
 ### Misalkan `\(Y=\hspace{0.2cm}\)` Banyaknya muncul sisi gambar.&lt;br&gt;Kemungkinan dari `\(Y=\{0,1,2\}\)`
 
-### Pemetaan fungsi `\(X\)`
+### Pemetaan fungsi `\(Y\)`
 
 ![](gb_06.jpg)
 
@@ -212,7 +220,7 @@ background-image: url("gb_03.jpg")
 
 ###adalah pemusatan dari nilai peubah acak jika percobaannya dilakukan secara berulang-ulang sampai tak berhingga kali (**dalam jangka waktu yang panjang**).
 
-### `$$E(X) = \left\{\begin{array}{ll} \sum\limits_{\forall{x}} xp(x) &amp; x\mbox{ diskret} \\ \int\limits_{\forall{x}} xd(x) &amp; x\mbox{ kontinu} \end{array}\right.$$`
+### `$$E(X) = \left\{\begin{array}{ll} \sum\limits_{\forall{x}} xp(x) &amp; x\mbox{ diskret} \\ \int\limits_{\forall{x}} xf(x)d(x) &amp; x\mbox{ kontinu} \end{array}\right.$$`
 ]
 
 .pull-right[
@@ -348,17 +356,17 @@ Sebaran peluang dari peubah acak `\(X\)`
 
 .red[**Contoh 16-1**]
 
-Pada suatu perusahaan produksi pulpen, diketahui dari 10 pulpen yang diproduksi terdapat 2 pulpen tidak memenuhi standar (B) dan 8 pulpen memenuhi standar (G). Jika diambil secara acak 2 pulpen dari proses produksi, dan peubah acak `\(X\)` menyatakan banyaknya pulpen baik yang terambil, tentukan sebaran
+Pada suatu perusahaan produksi pulpen, diketahui dari 10 pulpen yang diproduksi terdapat 2 pulpen rusak/bad (B) dan 8 pulpen bagus/good (G). Jika diambil secara acak 2 pulpen dari proses produksi, dan peubah acak `\(X\)` menyatakan banyaknya pulpen rusak/bad yang terambil, tentukan sebaran
 peubah acak `\(X\)`
 ___
 
-`\(X=\)` banyaknya pulpen baik yang terambil&lt;br&gt; `\(X=\{0,1,2\}\)`
+`\(X=\)` banyaknya pulpen rusak/bad yang terambil&lt;br&gt; `\(X=\{0,1,2\}\)`
 
 | `\(X\)` | `\(P(X)\)` |
 |:-:  | :-:    |
-| 0   | `\(P(X=0)=P(BB)=\dfrac{C_2^2 C_0^8}{C_{2}^{10}}=\dfrac{1}{45}\)` |
+| 0   | `\(P(X=0)=P(GG)=\dfrac{C_0^2 C_2^8}{C_{2}^{10}}=\dfrac{28}{45}\)` |
 | 1   | `\(P(X=1)=P(BG)=\dfrac{C_1^2 C_1^8}{C_{2}^{10}}=\dfrac{16}{45}\)` |
-| 2   | `\(P(X=2)=P(GG)=\dfrac{C_0^2 C_2^8}{C_{2}^{10}}=\dfrac{28}{45}\)` |
+| 2   | `\(P(X=2)=P(BB)=\dfrac{C_2^2 C_0^8}{C_{2}^{10}}=\dfrac{1}{45}\)` |
 
 ]
 
@@ -457,9 +465,9 @@ Misalkan `\(X\)` peubah acak diskret, maka
 
 ### Sebaran Peluang Binomial
 
-- Terdiri atas `\(n\)` kejadian Bernoulli yang saling bebas dengan peluang sukses di setiap percobaan adalah sama.
+- Terdiri atas `\(n\)` kejadian **Bernoulli** yang saling bebas dengan peluang sukses di setiap percobaan adalah sama.
 - Peubah acak Binomial merupakan jumlah dari kejadian .red[**sukses**] dari `\(n\)` percobaan, `\(X=0,1,2,\dots, n\)`.
-- Misal, `\(p=P(\text{sukses})\)`, maka fungsi peluang peubah acak `\(X\sim\text{Binomial}(n,p)\)`
+- Misal, `\(p=P(\text{sukses})\)` pada setiap percobaan, maka fungsi peluang peubah acak `\(X\sim\text{Binomial}(n,p)\)`
 `$$p(x)=P(X=x)={n \choose x}p^x(1-p)^{n-x}$$`
 `\(E(X)=np\)`&lt;br&gt;
 `\(\text{Var}(X)=np(1-p)\)`
@@ -696,6 +704,7 @@ P(1&lt;Z&lt;1.75)&amp;=P(Z&lt;1.75)-P(Z&lt;1) \\
 ---
 
 .pull-left[
+&lt;br&gt;&lt;br&gt;
 .red[**Contoh**]
 
 Nilai ujian Matematika Kelas XI di suatu sekolah diketahui menyebar normal dengan rata-rata 56 dan ragam 9. Jika ditemui salah seorang siswa kelas XI secara acak, berapa peluang siswa yang ditemui tersebut memiliki nilai kurang dari 50.
@@ -718,7 +727,7 @@ Misalkan penggunaan kuota paket data di kalangan mahasiswa Kampus A menyebar
 normal dengan nilai tengah 10 GB per bulan dan simpangan baku 2 GB.
 - Jika di pilih satu orang mahasiswa secara acak, berapakah peluang bahwa
 mahasiswa tersebut biasanya menghabiskan lebih dari 8 GB per bulan?
-- Jika ada 1000 mahasiswa di Kampus A, berapa persen di antaranya yang
+- Jika ada 1000 mahasiswa di Kampus A, berapa mahaiswa yang
 menghabiskan kuota paket data lebih dari 8 GB per bulan?
 ___
 `\(X \sim \text{Normal}(10,4)\)`&lt;br&gt;
@@ -730,11 +739,11 @@ ___
 ---
 
 .pull-left[
-
+&lt;br&gt;&lt;br&gt;
 .red[**Soal**]
 
 Curah hujan di kota Bogor diketahui menyebar normal dengan rata-rata tingkat
-curah hujan 25 mm dan ragam 25 mm2. Hitunglah,
+curah hujan 25 mm dan ragam 25 `\(mm^2\)`. Hitunglah,
 - Peluang curah hujan di kota Bogor kurang dari 15 mm?
 - Peluang curah hujan di kota Bogor antara 10 mm sampai 20 mm?
 - Peluang curah hujan di kota Bogor di atas 40 mm?
@@ -745,7 +754,7 @@ tersebut.
 ]
 
 .pull-right[
-
+&lt;br&gt;&lt;br&gt;
 .red[**Soal**]
 
 Untuk membantu korban bencana sebuah lembaga sosial berinisiatif mengumpulkan dana dari para donatur. Jumlah sumbangan setiap donatur diketahui menyebar normal dengan rata-rata 120 ribu dan simpangan baku 80 ribu.
@@ -785,7 +794,7 @@ ___
 ---
 
 .pull-left[
-
+&lt;br&gt;&lt;br&gt;
 .red[**Soal**]
 
 Ujian Matematika mengunakan pilihan berganda sebanyak 10 soal dengan 5 pilihan dan hanya 1 jawaban yang benar. Antar soal tidak saling terkait atau berhubungan. Anton yang tidak belajar akhirnya menjawab semua soal dengan menebak (acak).
@@ -874,6 +883,19 @@ if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
     deleted = true;
   });
 })();
+// add `data-at-shortcutkeys` attribute to <body> to resolve conflicts with JAWS
+// screen reader (see PR #262)
+(function(d) {
+  let res = {};
+  d.querySelectorAll('.remark-help-content table tr').forEach(tr => {
+    const t = tr.querySelector('td:nth-child(2)').innerText;
+    tr.querySelectorAll('td:first-child .key').forEach(key => {
+      const k = key.innerText;
+      if (/^[a-z]$/.test(k)) res[k] = t;  // must be a single letter (key)
+    });
+  });
+  d.body.setAttribute('data-at-shortcutkeys', JSON.stringify(res));
+})(document);
 (function() {
   "use strict"
   // Replace <script> tags in slides area to make them executable
