--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Statistika: Pertemuan 05</title>
     <meta charset="utf-8" />
     <meta name="author" content="oleh Riana Hadiana" />
-    <script src="libs/header-attrs-2.17/header-attrs.js"></script>
+    <script src="libs/header-attrs-2.23/header-attrs.js"></script>
     <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="libs/remark-css-0.0.1/default-fonts.css" rel="stylesheet" />
     <link href="libs/tile-view-0.2.6/tile-view.css" rel="stylesheet" />
@@ -456,6 +456,51 @@ Misalkan `\(X\)` peubah acak diskret, maka
 
 ---
 
+.pull.center[
+#**Sebaran Peluang Bernoulli**
+]
+
+Berikut ini adalah hasil simulasi dari data yang memiliki sebaran Bernoulli dengan peluang sukses 30% yang dilakukan 500 kali.
+
+
+```
+##   [1] 0 0 0 0 1 1 0 0 0 0 1 1 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
+##  [38] 0 0 0 0 1 1 0 1 0 1 0 0 1 0 1 1 1 0 1 0 0 0 0 1 0 0 0 1 0 0 1 0 0 0 0 0 0
+##  [75] 1 0 0 0 1 0 1 1 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 1 0 0 0 0 1 1 0 0 1 0
+## [112] 1 0 0 1 0 1 0 1 0 0 0 0 0 0 0 1 0 1 0 1 0 0 1 0 0 0 0 0 0 0 0 0 1 0 0 0 0
+## [149] 0 1 0 0 0 1 0 0 1 1 0 1 0 0 1 0 1 0 1 1 1 1 1 0 0 0 1 0 0 0 0 0 0 0 1 1 0
+## [186] 0 1 1 0 0 0 0 0 0 0 1 0 0 1 0 1 1 0 1 0 0 0 0 0 0 0 0 0 1 0 0 1 0 1 0 0 0
+## [223] 0 1 0 0 0 1 0 1 1 0 0 0 0 0 0 1 1 1 0 1 0 0 0 0 0 0 0 0 1 1 1 0 0 0 0 1 1
+## [260] 0 0 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 0 1 0 0 0 1 0 0 0 1 0 1 0 0 0 0 0
+## [297] 1 0 0 1 1 0 0 0 0 1 1 0 1 0 0 0 0 0 1 0 1 1 1 0 0 0 0 1 1 0 0 0 0 0 0 0 0
+## [334] 0 1 0 1 1 0 0 0 1 0 0 0 0 0 1 0 0 0 0 1 1 0 1 1 0 0 0 1 1 1 0 0 0 0 0 0 0
+## [371] 0 1 0 1 0 0 1 1 1 0 1 0 0 1 1 0 0 0 1 1 0 0 0 0 0 1 1 0 0 0 1 1 1 0 0 0 0
+## [408] 0 0 0 1 0 0 0 0 0 1 1 1 0 0 0 0 0 0 0 0 0 0 1 0 1 1 0 1 0 0 0 0 0 0 1 1 0
+## [445] 0 1 1 0 0 0 1 0 0 1 0 0 1 0 0 0 1 0 1 1 0 0 1 1 1 0 0 1 0 0 0 0 0 0 0 1 1
+## [482] 0 1 0 0 1 0 1 1 0 0 0 0 0 1 1 0 0 0 0
+```
+
+---
+
+.pull.center[
+#**Sebaran Peluang Bernoulli**
+]
+
+.pull-left[
+![](index_files/figure-html/unnamed-chunk-2-1.png)&lt;!-- --&gt;
+]
+
+.pull-right[
+
+
+![](index_files/figure-html/unnamed-chunk-3-1.png)&lt;!-- --&gt;
+
+
+]
+
+
+
+---
 
 .pull.center[
 #**Beberapa Sebaran Peluang Diskret**
@@ -496,6 +541,50 @@ Rata-rata sukses melakukan lemparan `\(E(X) = np = 3p\)`
 ---
 
 .pull.center[
+#**Sebaran Peluang Binomial**
+]
+
+Berikut ini adalah hasil simulasi dari data yang memiliki sebaran Binomial dengan peluang sukses 30% dan `\(n=10\)` yang dilakukan 500 kali.
+
+
+```
+##   [1] 2 5 5 4 1 4 2 5 4 2 2 4 4 2 3 5 2 3 2 1 4 5 3 1 1 3 4 1 4 3 5 4 2 3 2 4 6
+##  [38] 3 2 3 4 3 1 7 4 6 3 4 4 5 3 6 4 4 4 0 5 2 3 2 2 2 2 3 3 3 7 4 1 3 4 2 4 1
+##  [75] 3 2 3 3 2 5 3 3 2 2 2 2 3 7 3 3 4 3 5 4 5 0 3 2 2 5 2 3 4 2 4 3 3 2 2 1 1
+## [112] 4 5 4 2 3 3 4 5 3 3 1 3 4 4 3 4 4 5 6 2 5 3 3 2 5 5 3 2 5 3 3 3 3 2 1 2 3
+## [149] 5 5 4 3 8 2 1 1 5 1 5 5 2 5 2 4 1 2 5 2 7 1 1 6 1 3 4 3 2 4 3 2 5 2 2 5 3
+## [186] 4 2 5 4 3 3 1 8 2 1 1 5 2 1 4 5 3 3 2 3 3 2 4 4 1 4 3 3 3 4 4 1 1 3 4 3 1
+## [223] 4 6 1 3 4 2 4 4 1 2 2 1 4 2 6 0 6 6 2 1 7 3 3 5 3 1 1 3 2 2 2 3 4 5 1 4 2
+## [260] 0 7 6 2 5 6 6 4 3 5 3 4 4 3 2 5 4 3 4 2 3 3 3 4 4 1 3 1 5 4 2 0 3 3 1 3 4
+## [297] 3 2 2 1 2 5 3 2 1 4 2 4 2 4 4 2 1 4 4 1 3 4 2 1 2 3 4 4 3 3 1 1 4 4 3 1 1
+## [334] 3 5 0 7 4 3 5 3 4 2 6 3 3 3 0 5 5 5 4 4 2 2 2 1 3 1 2 4 6 4 0 3 3 3 0 5 4
+## [371] 3 1 3 2 2 3 4 5 4 2 3 5 4 3 2 2 3 1 2 2 2 2 2 4 3 4 3 3 2 0 5 3 1 5 3 6 3
+## [408] 4 4 6 1 4 4 6 3 7 3 2 2 3 3 3 2 3 2 3 2 2 1 1 6 3 2 3 3 4 5 2 1 5 5 2 4 1
+## [445] 4 4 3 2 1 3 3 4 4 1 3 3 3 2 3 3 8 2 4 4 4 1 2 4 2 5 6 4 3 4 2 2 3 3 3 5 5
+## [482] 3 1 1 4 5 4 3 3 2 2 2 4 2 2 3 1 3 3 1
+```
+
+---
+
+.pull.center[
+#**Sebaran Peluang Binomial**
+]
+
+.pull-left[
+![](index_files/figure-html/unnamed-chunk-5-1.png)&lt;!-- --&gt;
+]
+
+.pull-right[
+
+![](index_files/figure-html/unnamed-chunk-6-1.png)&lt;!-- --&gt;
+
+]
+
+
+
+---
+
+.pull.center[
 #**Beberapa Sebaran Peluang Diskret**
 ]
 
@@ -504,7 +593,7 @@ Rata-rata sukses melakukan lemparan `\(E(X) = np = 3p\)`
 ### Sebaran Peluang Poisson
 
 - Peubah acak yang menyatakan banyaknya kejadian yang terjadi pada suatu interval waktu tertentu atau di suatu daerah tertentu
-- Peubah acak `\(X\)` disebut menyebar poisson dengan parameter `\(\mu\)` atau `\(X\sim\text{Poisson}(\mu)\)` jika
+- Peubah acak `\(X\)` disebut menyebar poisson dengan parameter `\(\lambda\)` atau `\(X\sim\text{Poisson}(\lambda)\)` jika
 `$$p(x)=P(X=x)=\dfrac{\lambda^xe^{-\lambda}}{x!}$$`
 `\(E(X)=\lambda\)`&lt;br&gt;
 `\(\text{Var}(X)=\lambda\)`
@@ -523,6 +612,55 @@ Peubah acak Poisson sering digunakan untuk menyatakan banyaknya suatu kejadian j
 
 Diketahui gempa bumi terjadi di bagian timur Indonesia dengan `\(\lambda=2\)` per minggu. Dapatkan peluang sedikitnya terjadi 1 kali gempa bumi selama
 dua minggu berikutnya.
+
+]
+
+---
+
+.pull.center[
+#**Sebaran Peluang Poisson**
+]
+
+Berikut ini adalah hasil simulasi dari data yang memiliki sebaran Poisson dengan `\(\lambda=5\)` yang dilakukan 500 kali.
+
+
+```
+##   [1]  7  3  5  5  4  1  3  3  3  3  6  4  7  5  4  4  9  6  5  4  3  6  5  6  5
+##  [26]  8  8  6  4  8  6  9  4  4  5  5  3  5  5  3  6  6  7  4  6  6  7  3  4  7
+##  [51]  6  7  9  3  6  3  2  5  5  6  6  2  7  4  1  8  2  5  7  5  2  6  6  5  4
+##  [76]  4  8  4  3  5  7  7  4  6  6  6  4  6  2  3  5  3  3  5 13  7  3  7  5  6
+## [101]  4  5  5  8  4  6  6  6  0  6  2  8  1  3  9  7  3  7  6  3  3  3  6  7  5
+## [126]  3  4  6  4  8  5  3  6  1  3  3  3  0  5  8  4  3  5  3  9  6  3 13  7  5
+## [151]  1  8  8  9  6  8  9  3  8  1  4  4 11  6  2  4  6  5  7  2  3  7  7  2  6
+## [176]  1  4  8  7  7  4  4  9  5  6  3  5  4  7  4  4  8  9  7  2  7  4  2  5  3
+## [201]  2  5  5  1 10  3  2  3  6  4  4  5  7  4  3  4  5  9  6 10  9  3  7  4 10
+## [226]  7  5  3  7  7  3  4  6  4  5  0  1  6  4  4  4  7  5  6 10  6  3  3  3  2
+## [251]  8  2  1  6  5  1  2  3  6  2  3  8  4  9  3  2  7  4  3  7  7  2  3  6  8
+## [276]  6  3  6  8  3  5  5  6  5  8  6  2  3  4  8  5  6  5  5  2  2  7  2  3  4
+## [301]  2  3  6  6  6  5  6  2  4  7  5  6  3  2  5  3  2  8  2 11  3  2 12  6  4
+## [326]  4  2  2  5  2  7  6  9  6  3  4  5  8 10  7  1  5  6  3  5  1  9  4  3  3
+## [351]  7  8  5  3  1  8  3  4  3  3  2  2  3  8  8  6  1  3  5  4  9  8  8  4  1
+## [376]  8  9  4  8  3  3  7  7  4  4  4  6  3  6  6  5  4  3  5  4  4  5  5  4  3
+## [401]  8  2  9  4  5  4  4  2  5  5  3  6 10  6  8  5  6  4  4 11 10  5  3  1  8
+## [426]  8  8  1  5  9  5  7  2  5  3  1  5  1  7  5  6  6  3  4  5  6  7 12  7  3
+## [451] 12  6  1  7  4  5  3  5  6  4  9  7  6  5  8  4  4  7  5  1  4  4  6  4  7
+## [476]  2  6  5  3  6  2  5  3  5  6  4  5  6  4  4  3  3  2  3  6  4  5  5  5  4
+```
+
+---
+
+.pull.center[
+#**Sebaran Peluang Poisson**
+]
+
+.pull-left[
+![](index_files/figure-html/unnamed-chunk-8-1.png)&lt;!-- --&gt;
+]
+
+.pull-right[
+
+
+![](index_files/figure-html/unnamed-chunk-9-1.png)&lt;!-- --&gt;
 
 ]
 
